<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/card_view"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:id="@+id/user_picture"
                android:scaleType="centerCrop"
                android:layout_height="250dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_height="wrap_content">


            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/display_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textStyle="bold"
                        android:textSize="24sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/bullet"
                        android:textSize="18sp"/>


                <TextView
                        android:id="@+id/user_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textSize="18sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/bullet"
                        android:textSize="18sp"/>
                <TextView
                        android:id="@+id/user_title_job"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:textSize="18sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/bullet"
                        android:textSize="18sp"/>

                <TextView
                        android:id="@+id/user_religion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:textSize="18sp"/>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_favourite"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                </LinearLayout>


                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_height"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_score"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                </LinearLayout>


                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_contact"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_latitute"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_lat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                </LinearLayout>


                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_longitude"
                            android:textSize="16sp"/>
                    <TextView
                            android:id="@+id/user_lon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

