<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:rsb="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:layout_width="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_photo"/>

                <Switch android:layout_width="wrap_content"
                        android:id="@+id/has_photo_switch"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_in_contact"/>

                <Switch android:layout_width="wrap_content"
                        android:id="@+id/in_contact_switch"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_Favourite"/>

                <Switch android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:id="@+id/in_fav_switch"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_comp_score"/>

                <com.osamaaftab.filtering.ui.customView.RangeSeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        rsb:absoluteMaxValue="100"
                        android:id="@+id/score_range_seek"
                        rsb:textAboveThumbsColor="@color/colorAccent"
                        rsb:absoluteMinValue="1"/>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_age"/>

                <com.osamaaftab.filtering.ui.customView.RangeSeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        rsb:absoluteMaxValue="95"
                        android:id="@+id/age_range_seek"
                        rsb:textAboveThumbsColor="@color/colorAccent"
                        rsb:absoluteMinValue="18"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_height_dup"/>

                <com.osamaaftab.filtering.ui.customView.RangeSeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        rsb:absoluteMaxValue="210"
                        android:id="@+id/height_range_seek"
                        rsb:textAboveThumbsColor="@color/colorAccent"
                        rsb:absoluteMinValue="135"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/text_dist"/>


                <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="300"
                        app:isb_min="30"
                        app:isb_progress="300"
                        app:isb_show_tick_texts="true"
                        app:isb_ticks_count="2"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:text="Reset"
                        android:id="@+id/reset"
                        android:layout_height="wrap_content"/>
                <Button
                        android:layout_width="wrap_content"
                        android:text="Apply"
                        android:id="@+id/apply"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>