<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/filter"
            android:icon="@drawable/ic_filter"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:contentDescription="@string/text_filter_desc"
            android:title="@string/text_filter_desc" />
</menu>